add: other files

--- a/apigw/Dockerfile
+++ b/apigw/Dockerfile
@@ -1,2 +1,6 @@
 FROM openjdk:8-jdk-alpine
-ENTRYPOINT ["/run.sh"]
+
+COPY /build/libs/apigw*.jar /apps/apigw/app.jar
+WORKDIR /apps/apigw/
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
