--- a/canary/Dockerfile
+++ b/canary/Dockerfile
@@ -1,2 +1,6 @@
 FROM openjdk:8-jdk-alpine
-ENTRYPOINT ["/run.sh"]
+
+COPY /build/libs/canary*.jar /apps/canary/app.jar
+WORKDIR /apps/canary/
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
